Hygieia_UI/UI/src/app/css/dashboardCSS.less
@import (reference) 'variables';
@import (reference) 'mixins';

//header styles for both list dashboard and dashboard page

.hamburger-ListdashPage{
	float:left;
	margin-left:2.2%;
	margin-top:-10px;
}
.edMenu-ListDash-Page{
	float:left;
	margin-top:-4px;
	margin-left:2.1%;
}
.edtext-ListdashPage{
	float:left;
	color:#fff;
	font-size:13px;
	margin-left:0.5%;
	margin-top:-6px;
}
.signout-ListdashPage{
	float:right;
	margin-right:-60px !important;
	cursor:pointer;
	margin-top:-5px !important; 
}
.customHeader .widget-modal-heading{
	border-bottom:none !important;
    color:#000 !important;
    font-weight:200;
    height:40px;
    font-size:15px !important;
}
.widget-modal .widget-modal-heading{
	border-bottom:none !important;
    color:#000 !important;
    font-weight:200;
    height:40px;
    font-size:15px !important;
}
.tab-list{
	color:#fff;
	margin-top:-10px;
	font-size:12px;
}
#dashboard{
	background-image:none !important;
	background:#efefef !important;
}

//c3 graphs customisation//

.c3-tooltip td {
font-size:13px;
padding: 3px 6px;
background-color:#7ABEF8;
border-left:1px dotted #999;
color: #000;
}
.c3-tooltip tr {
font-size:13px;
padding: 3px 6px;
background-color:#7ABEF8;
border-left:1px dotted #999;
color: #000;
}
.c3 .c3-axis path, .c3 .c3-axis line {
  stroke-width:1px;
}
.c3 line, .c3 path{
	fill:none;
	stroke:#000;
}

@media only screen and (min-width: 720px) and (max-width: 1000px) {
.large-devic-res{
	height:228px;
}
}

.cancel-btn-popups{
	background:#fff !important;
	color:#000 !important;
	border: 1px solid #cccccc !important;
    box-shadow: none !important;
	border-radius:0px;
}
.all-box-props{
	background: #fff;
	height: 175px !important;
	box-shadow:0 1px 1px #888;
	padding: 0px 0px 0px 0px !important;
}
.box-header-style{
	color: #000 !important;
}
.kanban-widget-styles{
	background: #fff !important;
    box-shadow: 0 1px 1px #888 !important;
    border-radius: 0px !important;
    text-shadow:none;
}
.kanban-widget-heading{
	height:30px;
    font-size: 14px;
    color:#000;
    text-shadow:none !important;
    border-bottom:none;
 }
.widget-sub-head{
	border-bottom-color: rgba(255,255,255,.25) !important;
 	line-height: 1.2rem !important;
    font-weight: 600 !important;
    white-space: nowrap !important;
    font-size:14px !important;
}
.widget-inner-labels{
	border-bottom-color: rgba(255,255,255,.25) !important;
  	text-transform:none !important;
    line-height: 1.2rem !important;
    letter-spacing:normal !important;
    font-weight: 400 !important;
    white-space: nowrap !important;
    font-size:12px !important;
}
.ct-grids line {
	stroke:steelblue;
}
.ct-labels span {
  color: steelblue;
}
.create-project-inputboxes{
	width:55% !important;
	margin-left:16px !important;
}

.form-group.has-error .help-block{
	margin-top:0px !important;
	margin-bottom:0px !important;
	color:#e50800;
}

.form-horizontal.validation-message-align .form-group.has-error .help-block{
	margin-left:26%;
}
.form-horizontal.validation-message-align-adduser .form-group.has-error .help-block{
	margin-left:3%;
}

.has-error .form-control{
	border-color:#e50800;
}
.green-btn-props{
	width: 20%;
    color: #fff;
    border: none;
    border-radius: 2px;
    height: 32px;
    padding-top: 5px;
    font-weight: normal;
    font-size: 14px;
}
.white-cancel-btn{
	width: 20% !important;
    color: #000 !important;
    border: none !important;
    border-radius: 2px !important;
    height: 32px !important;
    background: #fff !important;
    box-shadow: none !important;
    border: 1px solid #cccccc !important;
    font-weight: normal !important;
    font-size: 14px !important;
}
.createproj-label-props{
	font-weight: 400;
	font-size: 13px;
	text-align:left !important;
}
.blue-gradient-bg{
	background: -webkit-linear-gradient(right, #FBFDFE, #A0C4E3) !important;
    background: -o-linear-gradient(left, #FBFDFE, #A0C4E3) !important;
    background: -moz-linear-gradient(left, #FBFDFE, #A0C4E3) !important;
    background: linear-gradient(to left, #FBFDFE, #A0C4E3) !important;
    overflow:auto;
}
.dashboard-list-block{
	background: white;
    margin-top: 8px;
    margin-left: 0px;
    margin-right: 0px;
    box-shadow: 0px 0px 2px #888888;
    border-radius: 0px;
    border-left:4px solid #96c356;
    font-size:13px;
}
.edit-delete-btn{
	width: 20px;
	height: 20px;
	cursor: pointer;
}

//jira detail page styles - sprint metrics//

.sprint-box-widget-props{
	font-size: 11px;
	padding-top: 10%;
}
.sprint-box-widget-response-val{
	padding-top: 5%;
	font-size: 24px;
}
.sprint-box-val-color-red{
	color:#ff471a;
}
.sprint-box-val-color-green{
	color:#00802b;
}
.sprint-box-val-color-blue{
	font-size: 24px;
	color: #0099ff;
}
.sprint-box-val-color-violet{
	color: #6600cc;
}
.sprint-box-val-head{
	font-weight:600;
	font-size:13px;
}
.sprint-box-first-div{
	font-size: 11px;
	padding-top: 6%;
}
.sprint-graphs-prop{
	height: 200px;
	font-size: 11px;
}
.sprint-head-bluebar{
	background: #5F95C3 !important;
	color: #fff !important;
	padding-top: 5px !important;
    padding-bottom: 5px !important;
}
.sprint-def-priorty-response{
	color: #ff4d4d;
	font-size: 40px;
}
.sprint-def-priorty-response-secnd{
	color: #ffa31a;
	font-size: 40px;
}
.sprint-def-priorty-response-thrd{
	color: #1ac6ff;font-size: 40px;
}
.sprint-priority-env-head-padding{
	padding: 2% 0px 0px 0%;
}
.sprint-list-parent{
	border-top: 1px solid #d6d6d6;
    padding-top: 12px;
    height: 240px;
}
.sprint-border-rightprop{
	border-right:1px solid #d6d6d6;
}
.sprint-border-topprop{
	border-top:1px solid #d6d6d6;
}
//sprint page ends//

#demo .content li:hover{
	background:#B3D0E9 !important;
}
#site .list-group-item:hover{
	background-color:#fff !important;
}

//tab styling//

ul.tab-styling-userManagement {
    list-style: none;
    padding: 0;
    margin: 0;
}
li.style-forli {
    float: left;
    border-bottom-width: 0;
    margin: 3px 3px 0px 3px;
    padding: 5px 5px 0px 5px;
    cursor:pointer;
}
#mainView {
    clear: both;
	padding: 0 1em;
}
.active {
    background-color: #5A8DB9;
    color: #fff;
}

.main{
 	margin-top: 5px;
}

.main-login{
 	background-color: #fff;
    /* shadows and rounded borders */
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    border-radius: 2px;
    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);

}
.main-center{
 	margin-top: 30px;
 	margin: 0 auto;
 	max-width: 330px;
    padding: 40px 40px;
}
.login-button{
	margin-top: 5px;
}
.login-register{
	font-size: 11px;
	text-align: center;
}

button.accordion {
    background-color: #eee;
    color: #444;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
    transition: 0.4s;
}

button.accordion.active, button.accordion:hover {
    background-color: #ddd;
}
button.accordion:after {
    content: '\002B';
    color: #777;
    font-weight: bold;
    float: right;
    margin-left: 5px;
}
button.accordion.active:after {
    content: "\2212";
}
div.panel {
    padding: 0 18px;
    background-color: white;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
}
 .table-bordered td {
 	border-top: 1px solid #ddd!important;
 	border-bottom:1px solid #ddd!important;
 }
 .table-bordered th,{
 	border-top: 1px solid #ddd!important;
 	border-bottom:3px solid #ddd!important;
 }
 .c3-axis-y text 
{
  width:30px; //change the size of the fonts
}

.c3-axis-x text 
{
  width:30px; //change the size of the fonts
}

.widget-modal{
	padding:20px !important;
}
.widget-modal .widget-modal-heading{
	text-align:left !important;
	background: #fcfcfc;
    border-bottom: 1px solid #d6d6d6 !important;
    margin-bottom:2% !important;
    font-weight: 400;
}

.dualmultiselect .pool{
	height:102px !important;
}
.shareproject-labels-props{
	font-weight: 500;
    color: #666666;
}
.repo-view .repo-summary-table td:first-child{
	width:3% !important;
}
.feature-view .story-summary-type{
	font-weight:400 !important;
}

//dual list css//

.dualmultiselect label {
  margin: 10px;
}

.dualmultiselect .btn {
  margin: 10px;
}

.dualmultiselect .pool {
  border: 1px solid #999;
  border-radius: 4px;
  padding: 10px;
  margin: 5px;
  height: 150px;
  overflow-y: scroll;
}

.dualmultiselect .pool ul {
  list-style: none;
  padding-left: 0px;
}

.dualmultiselect .pool ul li {
  width: 100%;
  padding: 4px 8px 4px 4px;
  border-bottom: 1px dotted #CFCFCF;
}

.dualmultiselect .pool ul li a:hover {
  text-decoration: none;
}

.alert, .thumbnail{
	margin-bottom:0px !important;
}

body {
       font-family: "Segoe UI";
  }

//login page styles and signup page//

.signIn-signup-btn-props{
	background: #1766A4 !important;
	border: #1766A4 !important;
	box-shadow: none !important;
	font-size: 12px !important;
	border-radius: 3px !important;
	font-weight: normal !important;
}
.creatnew-login-label-props{
	color: #3B7EB2;
	cursor: pointer;
}
.upper-label-props{
	font-weight: normal !important;
	color: #999999 !important;
}
.emu-logo-props{
	height: 70px;
    width: 70px;
}
.emu-header-props{
	font-size: 15px;
	color: #848484;
	font-weight: 600;
}
.inputgroup-props{
	width: 100%;
}
.inputbox-props{
	border-radius:1px !important;
}
.poweredBy-label-specs{
	color: #000;
}
.footer-padding-props{
	padding-left: 8%;
	padding-top: 2%;
}

